attempt to fix form overflow mobile

--- a/src/styles/Form.module.scss
+++ b/src/styles/Form.module.scss
@@ -20,6 +20,9 @@
 			flex-wrap: wrap;
 			gap: 10px;
 			height: fit-content;
+			font-family: Arial, Helvetica, sans-serif;
+			font-weight: 300;
+			font-size: 1rem;
 
 			.inputLabel {
 				margin-top: 15px;
@@ -29,27 +32,24 @@
 			}
 
 			.inputField {
-				font-family: SF-Compact-Text;
-				font-weight: 300;
-				font-size: 1rem;
+	
 				background-color: vars.$color-grey-transparent;
 				outline: none;
 				border: none;
 				border-radius: 10px;
 				padding: 1.1ch;
 				color: inherit;
+				max-width: 100%;
 			}
 
 			.inputMessage {
 				resize: vertical;
 				max-height: 40vh;
 				min-height: 100px;
+				max-width: 100%;
 			}
 
 			.errorMsg {
-				font-family: SF-Compact-Text;
-				font-weight: 300;
-				font-size: 1rem;
 				color: vars.$color-red;
 				margin: 0;
 			}
@@ -64,6 +64,6 @@
 @media only screen and (max-width: vars.$maxWidth) {
 	.form {
 		min-width: 100%;
-		max-width: 100vw;
+		max-width: 90vw;
 	}
 }
